Added functionality and changed style of checkboxes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="checkbox.css" />
+    <!-- <link rel="stylesheet" href="checkbox.css" /> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -38,43 +38,14 @@
     <div id="toDoApp" class="toDoContainer">
       <div id="todo">
         <h3>todos</h3>
-        <ul id="incompleteTasksContainer" class="incompleteTasks">
-          <li>
-            <div>
-              <label class="checkbox path">
-                <input type="checkbox" />
-                <svg viewBox="0 0 21 21">
-                  <path
-                    d="M5,10.75 L8.5,14.25 L19.4,2.3 C18.8333333,1.43333333 18.0333333,1 17,1 L4,1 C2.35,1 1,2.35 1,4 L1,17 C1,18.65 2.35,20 4,20 L17,20 C18.65,20 20,18.65 20,17 L20,7.99769186"
-                  ></path>
-                </svg>
-              </label>
-              <span>Pay bills</span>
-            </div>
-            <div>
-              <button id="editBtn" class="btn editButton">
-                Edit <i class="far fa-edit"></i></button
-              ><button id="deleteBtn" class="btn deleteButton">
-                Delete <i class="far fa-trash-alt"></i>
-              </button>
-            </div>
-          </li>
-          <li></li>
-        </ul>
+        <ul id="incompleteTasksContainer" class="incompleteTasks"></ul>
       </div>
       <div id="todo">
         <h3>completed</h3>
         <ul id="incompleteTasksContainer" class="incompleteTasks">
           <li>
             <div>
-              <label class="checkbox path">
-                <input type="checkbox" checked />
-                <svg viewBox="0 0 21 21">
-                  <path
-                    d="M5,10.75 L8.5,14.25 L19.4,2.3 C18.8333333,1.43333333 18.0333333,1 17,1 L4,1 C2.35,1 1,2.35 1,4 L1,17 C1,18.65 2.35,20 4,20 L17,20 C18.65,20 20,18.65 20,17 L20,7.99769186"
-                  ></path>
-                </svg>
-              </label>
+              <input id="PROBA" type="checkbox" checked />
               <span class="text-decoration-line-through">Pay bills</span>
             </div>
             <div>
@@ -92,8 +63,8 @@
       <div class="modal-content">
         <span id="closeModal" class="closeModal">&times;</span>
         <div id="add" class="mb-5">
-          <h3>new item</h3>
-          <input class="form-control" id="addItemInput" type="text" />
+          <h3>new task</h3>
+          <input id="addItemInput" type="text" />
           <span id="addBtn" class="btn btn-outline-primary mt-3">Add task</span>
         </div>
       </div>
